# xrdp

./: Makefile.am  configure.ac
.devcontainer/: Dockerfile  README.md  devcontainer.json
common/: ms-rdpbcgr.h  xrdp_constants.h
jmsrdp/: Makefile.am  xrdp-color.c  xrdp-jms.c  xrdp-jms.h
libxrdp/: Makefile.am  xrdp_caps.c  xrdp_orders.c  xrdp_rdp.c
neutrinordp/: xrdp-neutrinordp.c  xrdp-neutrinordp.h
utils/: build.env  build_docker.sh  init-build.sh  jms.env  xrdp.ini  xrdp_init_build.sh  xrdp_make_run.sh
